ensure pull to refresh icon is visible on android and remove comments

--- a/src/sass/views/walletDetails.scss
+++ b/src/sass/views/walletDetails.scss
@@ -92,6 +92,11 @@
 #walletDetails {
   background: #F8F8F9;
 
+  .scroll-refresher {
+    z-index: 1;
+    margin-top: 3.5rem;
+  }
+
   .ionic-refresher-content {
     color: white !important;
   }
